--- a/src/main/resources/view/cadastro.fxml
+++ b/src/main/resources/view/cadastro.fxml
@@ -44,21 +44,21 @@
         <Pane layoutX="400.0" prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: #FFF;">
             <children>
 
-                <Label layoutX="155.0" layoutY="110.0" text="Cadastro">
+                <Label layoutX="145.0" layoutY="88.0" text="Cadastro">
                     <font><Font name="Ebrima Bold" size="24.0" /></font>
                 </Label>
 
                 <!-- Nome -->
-                <TextField fx:id="campoNome" layoutX="88.0" layoutY="170.0" prefHeight="25.0" prefWidth="227.0" promptText="Nome" />
+                <TextField fx:id="campoNome" layoutX="87.0" layoutY="131.0" prefHeight="25.0" prefWidth="227.0" promptText="Nome" />
 
                 <!-- ComboBox Tipo de Usuário (SEM items no FXML) -->
-                <ComboBox fx:id="campoTipoUsuario" layoutX="87.0" layoutY="285.0" prefHeight="25.0" prefWidth="227.0" />
+                <ComboBox fx:id="campoTipoUsuario" layoutX="88.0" layoutY="294.0" prefHeight="25.0" prefWidth="227.0" />
 
                 <!-- Email -->
-                <TextField fx:id="campoEmail" layoutX="88.0" layoutY="212.0" prefHeight="25.0" prefWidth="227.0" promptText="E-mail Institucional" />
+                <TextField fx:id="campoEmail" layoutX="88.0" layoutY="163.0" prefHeight="25.0" prefWidth="227.0" promptText="E-mail Institucional" />
 
                 <!-- Senha -->
-                <PasswordField fx:id="campoSenha" layoutX="87.0" layoutY="250.0" prefHeight="25.0" prefWidth="227.0" promptText="Senha" />
+                <PasswordField fx:id="campoSenha" layoutX="88.0" layoutY="195.0" prefHeight="25.0" prefWidth="227.0" promptText="Senha" />
 
                 <!-- Botão Criar Conta -->
                 <Button layoutX="88.0" layoutY="350.0" onAction="#criarConta" prefHeight="31.0" prefWidth="227.0" style="-fx-background-color: #0F1D45;" text="Criar Conta" textFill="WHITE" />
@@ -72,6 +72,8 @@
                 <Label layoutX="195.0" layoutY="325.0" onMouseClicked="#abrirTelaLogin" text="Clique Aqui" textFill="#00000094">
                     <font><Font name="Ebrima" size="12.0" /></font>
                 </Label>
+            <TextField fx:id="campoMatricula" layoutX="88.0" layoutY="225.0" prefHeight="25.0" prefWidth="227.0" promptText="Matricula" />
+            <TextField fx:id="campoDepartamento" layoutX="88.0" layoutY="258.0" prefHeight="25.0" prefWidth="227.0" promptText="Departamento" />
 
             </children>
         </Pane>
