Cadastro do TCC

--- a/src/main/resources/view/tela-aluno/com-tcc.fxml
+++ b/src/main/resources/view/tela-aluno/com-tcc.fxml
@@ -9,7 +9,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/25"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controllers.MeuTCCComController"
+            fx:controller="controller.MeuTccController"
             prefWidth="900" prefHeight="600"
             style="-fx-background-color: #ECF0F1;">
 
