--- a/src/main/resources/view/tela-aluno/editar-tcc.fxml
+++ b/src/main/resources/view/tela-aluno/editar-tcc.fxml
@@ -74,11 +74,6 @@
                                   wrapText="true"
                                   style="-fx-background-radius: 6; -fx-border-color: #BDC3C7; -fx-border-radius: 6;" />
 
-                        <!-- ORIENTADOR -->
-                        <Label text="Orientador" style="-fx-font-size: 15px; -fx-font-weight: bold;" />
-                        <ComboBox fx:id="comboOrientador"
-                                  style="-fx-background-radius: 6; -fx-border-color: #BDC3C7; -fx-border-radius: 6;" />
-
                         <!-- BOTÃO SALVAR -->
                         <HBox alignment="CENTER_RIGHT">
                             <padding>
@@ -87,6 +82,7 @@
 
                             <Button text="Salvar Alterações"
                                     fx:id="btnSalvar"
+                                    onAction="#salvarAlteracoes"
                                     style="-fx-background-color: #0F1D45; -fx-text-fill: white; 
                                            -fx-background-radius: 6; -fx-padding: 10 25; 
                                            -fx-font-weight: bold; -fx-font-size: 14px;" />
