--- a/src/main/resources/view/login.fxml
+++ b/src/main/resources/view/login.fxml
@@ -1,69 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
+<GridPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
+  
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
+  </columnConstraints>
+  
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+  </rowConstraints>
+   
+   <children>
+      
+      <VBox alignment="CENTER" style="-fx-background-color: #0F1D45;" GridPane.columnIndex="0">
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="200.0" preserveRatio="true">
+               <image>
+                  <Image url="@logo-gestao-tccs-e-monografias-branco.png" />
+               </image>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </ImageView>
+            
+            <Label text="Sistema de Gestão" textFill="WHITE">
+               <font>
+                  <Font name="Ebrima Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label text="De" textFill="WHITE">
+               <font>
+                  <Font name="Ebrima Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label text="TCCs e Monografias" textFill="WHITE">
+               <font>
+                  <Font name="Ebrima Bold" size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
 
-    <children>
+      <VBox alignment="CENTER" spacing="15" style="-fx-background-color: #FFF;" GridPane.columnIndex="1">
+         <children>
+            <Label text="Login" textFill="#0f1d45">
+               <font>
+                  <Font name="Ebrima Bold" size="32.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
 
-        <!-- LADO ESQUERDO -->
-        <VBox alignment="CENTER" prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: #0F1D45;">
-            <children>
-
-                <!-- LOGO -->
-                <ImageView fitHeight="150.0" fitWidth="200.0" preserveRatio="true">
-                    <image>
-                        <Image url="@logo-gestao-tccs-e-monografias-branco.png" />
-                    </image>
-                </ImageView>
-
-                <Label text="Sistema de Gestão" textFill="WHITE">
-                    <font><Font name="Ebrima Bold" size="14.0" /></font>
+            <TextField fx:id="campoEmail" maxWidth="300.0" prefHeight="35.0" promptText="E-mail" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #BDC3C7;" />
+            
+            <PasswordField fx:id="campoSenha" maxWidth="300.0" prefHeight="35.0" promptText="Senha" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #BDC3C7;" />
+            
+            <Label fx:id="labelErro" textFill="RED" visible="false" />
+            
+            <VBox alignment="CENTER" spacing="5">
+                <Label text="Não possui cadastro?">
+                   <font>
+                      <Font name="Ebrima" size="12.0" />
+                   </font>
                 </Label>
-                <Label text="De" textFill="WHITE">
-                    <font><Font name="Ebrima Bold" size="14.0" /></font>
+                <Label onMouseClicked="#onAbrirCadastro" style="-fx-cursor: hand;" text="Clique Aqui" textFill="#0f1d45" underline="true">
+                   <font>
+                      <Font name="Ebrima Bold" size="12.0" />
+                   </font>
                 </Label>
-                <Label text="TCCs e Monografias" textFill="WHITE">
-                    <font><Font name="Ebrima Bold" size="14.0" /></font>
-                </Label>
+            </VBox>
 
-            </children>
-        </VBox>
-
-        <!-- LADO DIREITO -->
-        <Pane layoutX="400.0" prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: #FFF;">
-            <children>
-
-                <Label layoutX="168.0" layoutY="163.0" text="Login">
-                    <font><Font name="Ebrima Bold" size="24.0" /></font>
-                </Label>
-
-                <TextField fx:id="campoEmail" layoutX="87.0" layoutY="229.0" prefHeight="25.0" prefWidth="227.0" promptText="E-mail" />
-
-                <PasswordField fx:id="campoSenha" layoutX="86.0" layoutY="270.0" prefHeight="25.0" prefWidth="227.0" promptText="Senha" />
-
-                <Label fx:id="labelErro" layoutX="87.0" layoutY="305.0" textFill="RED" visible="false" />
-
-                <Label layoutX="87.0" layoutY="330.0" text="Não possui cadastro?">
-                    <font><Font name="Ebrima" size="12.0" /></font>
-                </Label>
-
-                <!-- Clique aqui para tela de cadastro -->
-                <Label layoutX="203.0" layoutY="330.0" onMouseClicked="#onAbrirCadastro" text="Clique Aqui" textFill="#00000094" />
-
-                <Button layoutX="87.0" layoutY="360.0" onAction="#fazerLogin" prefHeight="31.0" prefWidth="227.0" style="-fx-background-color: #0F1D45;" text="Entrar" textFill="WHITE" />
-
-            </children>
-        </Pane>
-
-    </children>
-</AnchorPane>
+            <Button onAction="#fazerLogin" maxWidth="300.0" prefHeight="40.0" style="-fx-background-color: #0F1D45; -fx-cursor: hand; -fx-background-radius: 5;" text="Entrar" textFill="WHITE">
+               <font>
+                  <Font name="Ebrima Bold" size="14.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+         <padding>
+            <Insets left="50.0" right="50.0" />
+         </padding>
+      </VBox>
+   </children>
+</GridPane>
