--- a/src/main/resources/view/tela-aluno/cadastro-tcc.fxml
+++ b/src/main/resources/view/tela-aluno/cadastro-tcc.fxml
@@ -9,7 +9,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/25"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controllers.CadastrarTCCController"
+            fx:controller="controller.CadastrarTCCController"
             prefWidth="900" prefHeight="600"
             style="-fx-background-color: #ECF0F1;">
 
@@ -119,6 +119,7 @@
                         <HBox alignment="CENTER_RIGHT">
                             <Button fx:id="btnCadastrarTCC"
                                     text="Cadastrar TCC"
+                                    onAction="#CriarTCC"
                                     style="-fx-background-color: #0F1D45;
                                            -fx-text-fill: white;
                                            -fx-background-radius: 8;
