--- a/src/main/resources/view/cadastro.fxml
+++ b/src/main/resources/view/cadastro.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -7,86 +8,111 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroController">
+<GridPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroController">
+  
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
+  </columnConstraints>
+  
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+  </rowConstraints>
+   
+   <children>
+      
+      <VBox alignment="CENTER" style="-fx-background-color: #0F1D45;" GridPane.columnIndex="0">
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="200.0" preserveRatio="true">
+               <image>
+                  <Image url="@../images/logo-gestao-tccs-e-monografias-branco.png" />
+               </image>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </ImageView>
+            
+            <Label text="Sistema de Gestão" textFill="WHITE">
+               <font>
+                  <Font name="Ebrima Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label text="De" textFill="WHITE">
+               <font>
+                  <Font name="Ebrima Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label text="TCCs e Monografias" textFill="WHITE">
+               <font>
+                  <Font name="Ebrima Bold" size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
 
-    <children>
+      <VBox alignment="CENTER" spacing="10" style="-fx-background-color: #FFF;" GridPane.columnIndex="1">
+         <padding>
+            <Insets left="50.0" right="50.0" top="20.0" bottom="20.0"/>
+         </padding>
+         
+         <children>
+            <Label text="Cadastro" textFill="#0f1d45">
+               <font>
+                  <Font name="Ebrima Bold" size="32.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </Label>
 
-        <!-- LADO ESQUERDO -->
-        <VBox alignment="CENTER" prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: #0F1D45;">
-            <children>
+            <TextField fx:id="campoNome" maxWidth="350.0" prefHeight="35.0" promptText="Nome Completo" style="-fx-background-radius: 5; -fx-border-color: #BDC3C7; -fx-border-radius: 5;" />
 
-                <ImageView fitHeight="150.0" fitWidth="200.0" preserveRatio="true">
-                    <image>
-                        <Image url="@logo-gestao-tccs-e-monografias-branco.png" />
-                    </image>
-                </ImageView>
+            <TextField fx:id="campoEmail" maxWidth="350.0" prefHeight="35.0" promptText="E-mail Institucional" style="-fx-background-radius: 5; -fx-border-color: #BDC3C7; -fx-border-radius: 5;" />
 
-                <Label text="Sistema de Gestão" textFill="WHITE">
-                    <font><Font name="Ebrima Bold" size="14.0" /></font>
-                </Label>
-                <Label text="De" textFill="WHITE">
-                    <font><Font name="Ebrima Bold" size="14.0" /></font>
-                </Label>
-                <Label text="TCCs e Monografias" textFill="WHITE">
-                    <font><Font name="Ebrima Bold" size="14.0" /></font>
-                </Label>
+            <PasswordField fx:id="campoSenha" maxWidth="350.0" prefHeight="35.0" promptText="Senha" style="-fx-background-radius: 5; -fx-border-color: #BDC3C7; -fx-border-radius: 5;" />
 
-            </children>
-        </VBox>
+            <TextField fx:id="campoMatricula" maxWidth="350.0" prefHeight="35.0" promptText="Matrícula / SIAPE" style="-fx-background-radius: 5; -fx-border-color: #BDC3C7; -fx-border-radius: 5;" />
 
-        <!-- LADO DIREITO -->
-        <Pane layoutX="400.0" prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: #FFF;">
-            <children>
+            <TextField fx:id="campoDepartamento" maxWidth="350.0" prefHeight="35.0" promptText="Departamento" style="-fx-background-radius: 5; -fx-border-color: #BDC3C7; -fx-border-radius: 5;" />
 
-                <Label layoutX="145.0" layoutY="88.0" text="Cadastro">
-                    <font><Font name="Ebrima Bold" size="24.0" /></font>
-                </Label>
+            <ComboBox fx:id="campoTipoUsuario" maxWidth="350.0" prefHeight="35.0" promptText="Selecione o Tipo de Usuário" style="-fx-background-radius: 5; -fx-border-color: #BDC3C7; -fx-border-radius: 5; -fx-background-color: white;" />
 
-                <!-- Nome -->
-                <TextField fx:id="campoNome" layoutX="87.0" layoutY="131.0" prefHeight="25.0" prefWidth="227.0" promptText="Nome" />
+            <VBox alignment="CENTER_LEFT" maxWidth="350.0" spacing="5">
+               <Label fx:id="labelAreaPesquisa" text="Área de Pesquisa:" visible="false">
+                  <font><Font name="Ebrima" size="12.0" /></font>
+               </Label>
+               <TextField fx:id="campoAreaPesquisa" prefHeight="35.0" promptText="Sua área de pesquisa" style="-fx-background-radius: 5; -fx-border-color: #BDC3C7; -fx-border-radius: 5;" visible="false" />
+            </VBox>
 
-                <!-- Email -->
-                <TextField fx:id="campoEmail" layoutX="88.0" layoutY="163.0" prefHeight="25.0" prefWidth="227.0" promptText="E-mail Institucional" />
+            <Button onAction="#criarConta" maxWidth="350.0" prefHeight="40.0" style="-fx-background-color: #0F1D45; -fx-cursor: hand; -fx-background-radius: 5;" text="Criar Conta" textFill="WHITE">
+               <font>
+                  <Font name="Ebrima Bold" size="14.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Button>
 
-                <!-- Senha -->
-                <PasswordField fx:id="campoSenha" layoutX="88.0" layoutY="195.0" prefHeight="25.0" prefWidth="227.0" promptText="Senha" />
+            <VBox alignment="CENTER" spacing="5">
+               <Label text="Já possui cadastro?">
+                  <font>
+                     <Font name="Ebrima" size="12.0" />
+                  </font>
+               </Label>
+               <Label onMouseClicked="#abrirTelaLogin" style="-fx-cursor: hand;" text="Clique Aqui" textFill="#0f1d45" underline="true">
+                  <font>
+                     <Font name="Ebrima Bold" size="12.0" />
+                  </font>
+               </Label>
+            </VBox>
 
-                <!-- Matrícula -->
-                <TextField fx:id="campoMatricula" layoutX="88.0" layoutY="225.0" prefHeight="25.0" prefWidth="227.0" promptText="Matricula" />
-
-                <!-- Departamento -->
-                <TextField fx:id="campoDepartamento" layoutX="88.0" layoutY="258.0" prefHeight="25.0" prefWidth="227.0" promptText="Departamento" />
-
-                <!-- Tipo de Usuário -->
-                <ComboBox fx:id="campoTipoUsuario" layoutX="88.0" layoutY="294.0" prefHeight="25.0" prefWidth="227.0" />
-
-                <!-- Área de Pesquisa (SOMENTE PARA ORIENTADOR) -->
-                <Label fx:id="labelAreaPesquisa" layoutX="88.0" layoutY="325.0" prefHeight="25.0" prefWidth="227.0" text="Área de Pesquisa:" visible="false">
-                    <font><Font name="Ebrima" size="12.0" /></font>
-                </Label>
-
-                <TextField fx:id="campoAreaPesquisa" layoutX="88.0" layoutY="345.0" prefHeight="25.0" prefWidth="227.0" promptText="Área de Pesquisa" visible="false" />
-
-                <!-- Botão Criar Conta -->
-                <Button layoutX="88.0" layoutY="390.0" onAction="#criarConta" prefHeight="31.0" prefWidth="227.0" style="-fx-background-color: #0F1D45;" text="Criar Conta" textFill="WHITE" />
-
-                <!-- Texto: Já possui cadastro? -->
-                <Label layoutX="88.0" layoutY="430.0" text="Já possui cadastro?">
-                    <font><Font name="Ebrima" size="12.0" /></font>
-                </Label>
-
-                <!-- Link para Login -->
-                <Label layoutX="195.0" layoutY="430.0" onMouseClicked="#abrirTelaLogin" text="Clique Aqui" textFill="#00000094">
-                    <font><Font name="Ebrima" size="12.0" /></font>
-                </Label>
-
-            </children>
-        </Pane>
-
-    </children>
-</AnchorPane>
+         </children>
+      </VBox>
+   </children>
+</GridPane>
