--- a/src/main/resources/view/tela-aluno/com-tcc.fxml
+++ b/src/main/resources/view/tela-aluno/com-tcc.fxml
@@ -14,7 +14,7 @@
             style="-fx-background-color: #ECF0F1;">
 
     <!-- SIDEBAR -->
-    <left>
+    <!-- <left>
         <VBox alignment="TOP_CENTER" prefWidth="200" spacing="20"
               style="-fx-background-color: #0F1D45;">
             <padding><Insets top="30" bottom="30"/></padding>
@@ -23,7 +23,7 @@
                 <image><Image url="@logo-gestao-tccs-e-monografias-branco.png"/></image>
             </ImageView>
 
-            <!-- MENU -->
+            
             <VBox spacing="12">
 
                 <Button fx:id="btnPerfil" onAction="#abrirPerfil" prefWidth="180"
@@ -40,7 +40,7 @@
 
             </VBox>
         </VBox>
-    </left>
+    </left> -->
 
     <!-- ÁREA PRINCIPAL -->
     <center>
