--- a/src/main/resources/view/tela-coordenador/dashboard-coordenador.fxml
+++ b/src/main/resources/view/tela-coordenador/dashboard-coordenador.fxml
@@ -34,6 +34,11 @@
                 <Button fx:id="btnPrazos" onAction="#abrirPrazos" prefWidth="180" style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;" text="Prazos Institucionais">
                    <font><Font name="Ebrima" size="12.0" /></font>
                 </Button>
+                 <Button fx:id="sair" onAction="#sair" prefWidth="180"
+                            style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;"
+                            text="SAIR">
+                        <font><Font name="Ebrima" size="12.0" /></font>
+                    </Button>
             </children>
         </VBox>
     </left>
