--- a/src/main/resources/view/tela-aluno/com-tcc.fxml
+++ b/src/main/resources/view/tela-aluno/com-tcc.fxml
@@ -13,34 +13,6 @@
             prefWidth="900" prefHeight="600"
             style="-fx-background-color: #ECF0F1;">
 
-    <!-- SIDEBAR -->
-    <!-- <left>
-        <VBox alignment="TOP_CENTER" prefWidth="200" spacing="20"
-              style="-fx-background-color: #0F1D45;">
-            <padding><Insets top="30" bottom="30"/></padding>
-
-            <ImageView fitHeight="110" fitWidth="110" preserveRatio="true">
-                <image><Image url="@logo-gestao-tccs-e-monografias-branco.png"/></image>
-            </ImageView>
-
-            
-            <VBox spacing="12">
-
-                <Button fx:id="btnPerfil" onAction="#abrirPerfil" prefWidth="180"
-                        style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;"
-                        text="Perfil do Aluno"/>
-
-                <Button fx:id="btnMeuTCC" onAction="#abrirMeuTCC" prefWidth="180"
-                        style="-fx-background-color: #1E3A5F; -fx-text-fill: white; -fx-font-size: 14px;"
-                        text="Meu TCC"/>
-
-                <Button fx:id="btnCronograma" onAction="#abrirCronograma" prefWidth="180"
-                        style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;"
-                        text="Cronograma"/>
-
-            </VBox>
-        </VBox>
-    </left> -->
 
     <!-- ÁREA PRINCIPAL -->
     <center>
@@ -134,11 +106,12 @@
 
                            
                         </HBox>
- <Label fx:id="lblResumo"
+                      <Label fx:id="lblResumo"
                                text="Resumo"
                                style="-fx-font-size: 16px; -fx-text-fill: #2C3E50;"/>
                         <!-- Baixar arquivo -->
                         <Button fx:id="btnBaixarAtual"
+                        onAction="#baixarVersaoAtual"
                                 text="⬇ Baixar Documento Atual"
                                 style="-fx-background-color: #E3F2FD; -fx-text-fill: #0F1D45; -fx-font-weight: bold; -fx-background-radius: 6; -fx-border-color: #0F1D45; -fx-border-radius: 6; -fx-padding: 10 20;"/>
 
