--- a/src/main/resources/view/tela-orientador/dashboard-orientador.fxml
+++ b/src/main/resources/view/tela-orientador/dashboard-orientador.fxml
@@ -35,6 +35,11 @@
                     <Button onAction="#abrirBancas" prefWidth="180" style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px; -fx-cursor: hand;" text="Bancas">
                         <font><Font name="Ebrima" size="12.0" /></font>
                     </Button>
+                     <Button fx:id="sair" onAction="#sair" prefWidth="180"
+                            style="-fx-background-color: transparent; -fx-text-fill: white; -fx-font-size: 14px;"
+                            text="SAIR">
+                        <font><Font name="Ebrima" size="12.0" /></font>
+                    </Button>
                 </VBox>
             </children>
         </VBox>
